# infer

./: .gitignore  CMakeLists.txt  HANDOFF.md
export/: FORMAT.md  export_gpt2.py
src/: engine.cpp  main.cpp
